K8s-Config/msal-net-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msal-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: msal-proxy
  template:
    metadata:
      labels:
        app: msal-proxy
    spec:
      containers:
      -  image: "richtercloud/msal-net-proxy-opt"
         imagePullPolicy: Always
         name: msal-net-proxy
         ports:
         - containerPort: 80
           protocol: TCP
         volumeMounts:
         - mountPath: "/mnt/dp"
           name: dpvol
      volumes:
      - name: dpvol
        persistentVolumeClaim:
          claimName: msal-net-proxy-az-file-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: msal-proxy
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: msal-proxy
