K8s-Config/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/msal/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/msal/index?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "x-injected-aio,x-injected-name,x-injected-nameidentifier,x-injected-objectidentifier,x-injected-preferred_username,x-injected-tenantid,x-injected-uti"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - aadautofix.eastus.cloudapp.azure.com
    secretName: ingress-tls-prod
  rules:
  - host: aadautofix.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: kuard-pod
            port:
              number: 8080
        path: /(.*)
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msal-net-proxy
spec:
  rules:
  - host: aadautofix.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: msal-net-proxy
            port: 
              number: 80
        path: /msal
        pathType: Prefix
  tls:
  - hosts:
    - aadautofix.eastus.cloudapp.azure.com
    secretName: ingress-tls-prod
