K8s-Config/kuard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https:///msal/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https:///msal/index?rd="
    nginx.ingress.kubernetes.io/auth-response-headers: "x-injected-aio,x-injected-name,x-injected-nameidentifier,x-injected-objectidentifier,x-injected-preferred_username,x-injected-tenantid,x-injected-uti"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dakondra-msal-two.eastus.cloudapp.azure.com
    secretName: dakondra-msal-two.eastus.cloudapp.azure.com-tls
  rules:
  - host: dakondra-msal-two.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: kuard-pod
            port:
              number: 8080
        path: /(.*)
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msal-proxy
spec:
  rules:
  - host: dakondra-msal-two.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: msal-proxy
            port:
              number: 80
        path: /msal
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - dakondra-msal-two.eastus.cloudapp.azure.com
    secretName: dakondra-msal-two.eastus.cloudapp.azure.com-tls
